--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Main2Activity">
+        </activity>
         <activity android:name=".NewMileStoneActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,7 +19,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".ThirdActivity">
-
         </activity>
         <activity android:name=".MainActivity">
         </activity>
